[gd_scene load_steps=10 format=3 uid="uid://bqcmrd3sgxvcs"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_ltdc4"]
[ext_resource type="PackedScene" uid="uid://uwfcx0dtb2bc" path="res://Scenes/big_tree.tscn" id="3_rsj3o"]
[ext_resource type="PackedScene" uid="uid://dwvnkbkl3fw0d" path="res://Scenes/platform.tscn" id="3_x4hsc"]
[ext_resource type="PackedScene" uid="uid://das30qvpbu28b" path="res://Scenes/rock1.tscn" id="4_pwi5b"]
[ext_resource type="Texture2D" uid="uid://dbrwk67lnlp18" path="res://Arts/SpritesPersoBall/UwUSpriteBallFront-removebg-preview.png" id="4_xglq7"]
[ext_resource type="PackedScene" uid="uid://dd6m23uhhgmfy" path="res://Scenes/branches_bush.tscn" id="5_ok2nw"]
[ext_resource type="PackedScene" uid="uid://be8h04flewf2h" path="res://Scenes/tree.tscn" id="6_ilarj"]
[ext_resource type="PackedScene" uid="uid://doy0e7jnl2886" path="res://Scenes/wall.tscn" id="8_ar47r"]
[ext_resource type="Texture2D" uid="uid://uxl3y05r1kun" path="res://Arts/CrossCloseSprite/CrossClose.png" id="9_ch5om"]

[node name="Menu" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ltdc4")

[node name="platform" parent="." instance=ExtResource("3_x4hsc")]
position = Vector2(583, 472.125)

[node name="Sprite2D" type="Sprite2D" parent="platform"]
position = Vector2(368, 47.875)
scale = Vector2(0.152778, 0.138309)
texture = ExtResource("4_xglq7")

[node name="BigTree" parent="platform" instance=ExtResource("3_rsj3o")]
position = Vector2(214, -65.125)

[node name="Rock1" parent="platform" instance=ExtResource("4_pwi5b")]
position = Vector2(171, 66.875)

[node name="BranchesBush" parent="platform" instance=ExtResource("5_ok2nw")]
position = Vector2(529, 50.875)

[node name="platform2" parent="." instance=ExtResource("3_x4hsc")]
position = Vector2(672, 656)
scale = Vector2(0.254949, 0.68)

[node name="platform3" parent="." instance=ExtResource("3_x4hsc")]
position = Vector2(1034, 653)
scale = Vector2(0.24, 0.72)

[node name="MenuTitle" type="Label" parent="."]
z_index = 2
layout_mode = 0
offset_left = 570.0
offset_top = 139.0
offset_right = 702.0
offset_bottom = 214.0
scale = Vector2(5.87999, 2.2)
theme_override_colors/font_color = Color(0.85098, 0, 0, 1)
text = "The ball that was
   fast and UwU"

[node name="Level1Button" type="Button" parent="." groups=["MenuButtons"]]
z_index = 2
layout_mode = 0
offset_left = 484.0
offset_top = 691.0
offset_right = 560.0
offset_bottom = 727.0
scale = Vector2(2.60997, 2.06604)
focus_neighbor_left = NodePath("../Level4Button")
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_right = NodePath("../Level2Button")
focus_neighbor_bottom = NodePath("../Level2Button")
focus_next = NodePath("../Level2Button")
focus_previous = NodePath("../Level4Button")
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Level 1"

[node name="Level2Button" type="Button" parent="." groups=["MenuButtons"]]
z_index = 2
layout_mode = 0
offset_left = 848.0
offset_top = 691.0
offset_right = 924.0
offset_bottom = 727.0
scale = Vector2(2.6, 2.007)
focus_neighbor_left = NodePath("../Level1Button")
focus_neighbor_top = NodePath("../Level1Button")
focus_neighbor_right = NodePath("../Level3Button")
focus_neighbor_bottom = NodePath("../Level3Button")
focus_next = NodePath("../Level3Button")
focus_previous = NodePath("../Level1Button")
theme_override_font_sizes/font_size = 20
text = "Level 2"

[node name="Level3Button" type="Button" parent="." groups=["MenuButtons"]]
z_index = 2
layout_mode = 0
offset_left = 1199.0
offset_top = 691.0
offset_right = 1275.0
offset_bottom = 727.0
scale = Vector2(2.686, 2.006)
focus_neighbor_left = NodePath("../Level2Button")
focus_neighbor_top = NodePath("../Level2Button")
focus_neighbor_right = NodePath("../Level4Button")
focus_neighbor_bottom = NodePath("../Level4Button")
focus_next = NodePath("../Level4Button")
focus_previous = NodePath("../Level2Button")
theme_override_font_sizes/font_size = 20
text = "Level 3"

[node name="Tree" parent="." instance=ExtResource("6_ilarj")]
position = Vector2(1186, 473)

[node name="Level4Button" type="Button" parent="." groups=["MenuButtons"]]
z_index = 2
layout_mode = 0
offset_left = 1210.0
offset_top = 901.0
offset_right = 1286.0
offset_bottom = 937.0
scale = Vector2(2.6, 2)
focus_neighbor_left = NodePath("../Level3Button")
focus_neighbor_top = NodePath("../Level3Button")
focus_neighbor_right = NodePath("../Level1Button")
focus_neighbor_bottom = NodePath("../Level1Button")
focus_next = NodePath("../Level1Button")
focus_previous = NodePath("../Level3Button")
theme_override_font_sizes/font_size = 20
text = "Level 4"

[node name="Wall" parent="." instance=ExtResource("8_ar47r")]
position = Vector2(1406, 758)
rotation = 1.5708
scale = Vector2(0.44, 1.44)

[node name="QuitButton" type="Button" parent="." groups=["MenuButtons"]]
layout_mode = 0
offset_left = 1762.0
offset_top = 38.0
offset_right = 2777.0
offset_bottom = 753.0
scale = Vector2(0.12, 0.16)
focus_neighbor_left = NodePath("../Level1Button")
focus_neighbor_top = NodePath("../Level1Button")
focus_neighbor_right = NodePath("../Level1Button")
focus_neighbor_bottom = NodePath("../Level1Button")
icon = ExtResource("9_ch5om")

[node name="QuitLabel" type="Label" parent="QuitButton"]
layout_mode = 0
offset_left = -25.0001
offset_top = 743.75
offset_right = 102.0
offset_bottom = 778.75
scale = Vector2(8.49967, 4.83334)
theme_override_font_sizes/font_size = 25
text = "Quit game"

[connection signal="gui_input" from="Level1Button" to="." method="_on_level_1_button_gui_input"]
[connection signal="pressed" from="Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="gui_input" from="Level2Button" to="." method="_on_level_2_button_gui_input"]
[connection signal="pressed" from="Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="gui_input" from="Level3Button" to="." method="_on_level_3_button_gui_input"]
[connection signal="pressed" from="Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="gui_input" from="Level4Button" to="." method="_on_level_4_button_gui_input"]
[connection signal="focus_entered" from="QuitButton" to="." method="_on_quit_button_focus_entered"]
[connection signal="focus_exited" from="QuitButton" to="." method="_on_quit_button_focus_exited"]
[connection signal="gui_input" from="QuitButton" to="." method="_on_quit_button_gui_input"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
